// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SquareGame/Bord Default 1`] = `
.emotion-0:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-1 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    />
    <button
      className="emotion-1"
      onClick={[Function]}
    />
    <button
      className="emotion-1"
      onClick={[Function]}
    />
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    />
    <button
      className="emotion-1"
      onClick={[Function]}
    />
    <button
      className="emotion-1"
      onClick={[Function]}
    />
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    />
    <button
      className="emotion-1"
      onClick={[Function]}
    />
    <button
      className="emotion-1"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots SquareGame/Bord Default And Triangle 1`] = `
.emotion-0:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-1 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ○
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ○
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ○
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ×
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ×
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Bord Star 1`] = `
.emotion-0:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-1 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ☆
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ☆
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ☆
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      ☆
    </button>
  </div>
</div>
`;

exports[`Storyshots SquareGame/Bord Triangle 1`] = `
.emotion-0:after {
  content: "";
  display: table;
  clear: both;
}

.emotion-1 {
  background: #f0f8ff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

<div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;
